src/components/styles/Skills.css
.SkillsSection {
    display: flex;
    background-color: rgb(175, 212, 188);
    height: 50vh !important;
}

@Media (max-width: 800px) {
    .SkillsSection {
        flex-direction: column;
        height: 100vh !important;
    }
}

@Media (max-width: 400px) {
    .SkillCard {
        font-size: 12px;
    }
}

.Subcategories {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 100%;
}

.SkillCards {
    display: flex;
    justify-content: space-around;
    width: 100%;
    height: 70%;
}

.SkillCard {
    width: 40%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.1);
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1);
}

.SkillCard > h4 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0;
    background-color: rgba(0, 0, 0, 0.1);
    width: 100%;
    min-height: 20%;
    text-align: center;
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;
}

.SkillCard > ul {
    list-style-type: none;
    min-height: 100%;
    padding: 0;
    text-align: center;
    line-height: 25px;
}

@Media (max-height: 800px) {
    .SkillsSection {
        height: 100% !important;
        flex-direction: column;
        padding: 10px;
    }

    .SkillCard {
        height: 300px;
    }
}

